--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "shophub",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "A modern, full-stack eCommerce platform built with Next.js 14",
   "private": true,
   "scripts": {
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
