--- a/vercel.json
+++ b/vercel.json
@@ -3,17 +3,6 @@
   "devCommand": "npm run dev:client",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "regions": ["iad1"],
-  "functions": {
-    "app/api/**/*.ts": {
-      "runtime": "nodejs20.x"
-    }
-  },
-  "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "/api/:path*"
-    }
-  ]
+  "regions": ["iad1"]
 }
 
