--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,6 @@
 {
-  "buildCommand": "npm run vercel-build",
-  "devCommand": "npm run dev:client",
-  "installCommand": "npm install",
   "framework": "nextjs",
-  "regions": ["iad1"],
-  "functions": {
-    "app/api/**/*.ts": {
-      "runtime": "nodejs20.x"
-    }
-  }
+  "buildCommand": "npm run build",
+  "installCommand": "npm install"
 }
 
